--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -78,7 +78,7 @@ jobs:
       run: |
         python -m build --sdist --wheel
     - name: Deploy to Test PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@v1
       with:
         repository-url: https://test.pypi.org/legacy/
         skip-existing: true
